[package]
name = "atari2600"
version = "0.1.0"
authors = ["Luke Triantafyllidis <ltriant@cpan.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
sdl2 = "0.33.0"
lazy_static = "1.3.0"
